--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,27 @@ project(ShapeLegend)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(ShapeLegend
-        main.cpp
-
-        common/shader.cpp
-        common/shader.hpp
-
-        shader/SimpleFragmentShader.fragmentshader
-        shader/SimpleVertexShader.vertexshader
+        src/main.cpp
+        src/common/shader.cpp
+        src/common/shader.hpp
+        src/engine/render/RenderEngine.hpp
+        src/engine/render/RenderEngine.cpp
+        src/engine/render/OpenGLRenderEngine.cpp
+        src/engine/render/OpenGLRenderEngine.hpp
+        src/configuration/Configuration.hpp
+        src/configuration/World.hpp
+        src/configuration/World.cpp
+        src/engine/input/InputEngine.cpp
+        src/engine/input/InputEngine.hpp
+        src/event/Event.hpp
+        src/event/EventObserver.hpp
+        src/event/EventObservable.hpp
+        src/event/Event.cpp
+        src/event/EventObservable.cpp
+        src/engine/input/OpenGLPCInputEngine.cpp
+        src/engine/input/OpenGLPCInputEngine.hpp
+        src/engine/GameEngine.cpp
+        src/engine/GameEngine.hpp
 )
 
 # glfw
@@ -34,7 +48,7 @@ target_link_libraries(
         ${EXTRA_LIBS}
 )
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/shader/SimpleFragmentShader.fragmentshader
+configure_file(src/shader/SimpleFragmentShader.fragmentshader
         ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/shader/SimpleVertexShader.vertexshader
+configure_file(src/shader/SimpleVertexShader.vertexshader
         ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
